--- a/小程序商城项目/component/index/maxitem/index.wxml
+++ b/小程序商城项目/component/index/maxitem/index.wxml
@@ -1,9 +1,11 @@
 <!--component/index/maxitem/index.wxml-->
 <view class="content">
-        <view class="item-top">
-            <text>{{datamaxitem.maxtitle}}</text>
-            <text bindtap="onmore" data-title="{{datamaxitem.maxtitle}}" data-ti="{{datamaxitem.ma}}">更多></text>
-        </view>
+    <view class="content-div">
+            <view class="item-top">
+                    <text>{{datamaxitem.maxtitle}}</text>
+                    <text bindtap="onmore" data-title="{{datamaxitem.maxtitle}}" data-ti="{{datamaxitem.ma}}">更多></text>
+                </view>
+    </view>
         <view class="item-conter">
             <block wx:for="{{datamaxitem.phone}}" wx:key="index">
                 <v-item dataitem="{{item}}"></v-item>
